; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_claw.c_pages_to_order_of_mag.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_claw.c_pages_to_order_of_mag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@trace = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"pages%d\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"mag%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @pages_to_order_of_mag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pages_to_order_of_mag(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 1, i32* %4, align 4
  %6 = load i32, i32* @trace, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @CLAW_DBF_TEXT_(i32 5, i32 %6, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = icmp eq i32 %9, 1
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %40

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = icmp sge i32 %13, 512
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 9, i32* %2, align 4
  br label %40

16:                                               ; preds = %12
  store i32 2, i32* %5, align 4
  br label %17

17:                                               ; preds = %28, %16
  %18 = load i32, i32* %5, align 4
  %19 = icmp sle i32 %18, 512
  br i1 %19, label %20, label %31

20:                                               ; preds = %17
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp sle i32 %21, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %20
  br label %31

25:                                               ; preds = %20
  %26 = load i32, i32* %4, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %25
  %29 = load i32, i32* %5, align 4
  %30 = mul nsw i32 %29, 2
  store i32 %30, i32* %5, align 4
  br label %17

31:                                               ; preds = %24, %17
  %32 = load i32, i32* %4, align 4
  %33 = icmp sgt i32 %32, 9
  br i1 %33, label %34, label %35

34:                                               ; preds = %31
  store i32 9, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %31
  %36 = load i32, i32* @trace, align 4
  %37 = load i32, i32* %4, align 4
  %38 = call i32 @CLAW_DBF_TEXT_(i32 5, i32 %36, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %37)
  %39 = load i32, i32* %4, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %35, %15, %11
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @CLAW_DBF_TEXT_(i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
